--- a/product/assets/css/style.css
+++ b/product/assets/css/style.css
@@ -1,11 +1,11 @@
 body {
   height: 100vh;
-  width: 100vw
+  width: 100vw;
   overflow: hidden;
-  position: fixed;
 }
+
 #starfield {
-  width:100vh;
+  width: 100vh;
   height: 100vh;
   background: radial-gradient(ellipse at center, #242938, #000 0%);
   overflow: hidden;
@@ -14,12 +14,10 @@ body {
 
 /*                             HEADER                             */
 
-
 .header {
   position: relative;
   width: 1174px;
   margin: 40px auto;
-
 }
 
 .navbar {
@@ -28,18 +26,25 @@ body {
   flex-direction: row;
   width: 1174px;
   align-items: center;
-
 }
 
-.logo__header {
-
+.planet__img {
+  width: 500px;
+  height: 500px;
+  margin-left: 700px;
+  margin-top: -300px;
+  position: absolute;
 }
+
+.logo__header {}
+
 .header__items {
   width: 430px;
   display: flex;
   justify-content: space-between;
   flex-direction: row;
 }
+
 .header__item {
   color: white;
   font-size: 16px;
@@ -51,13 +56,9 @@ body {
 
 .header__item:hover {
   letter-spacing: 3px;
-
 }
 
-
-
 /*                             MAIN                             */
-
 
 .main {
   background: #fff;
@@ -69,8 +70,8 @@ body {
   right: 0;
   margin-left: auto;
   margin-right: auto;
-
 }
+
 .main__container {
   height: 506px;
   width: 1136px;
@@ -80,6 +81,7 @@ body {
   justify-content: space-between;
   flex-direction: row;
 }
+
 .main__description {
   width: 568px;
 }
@@ -89,48 +91,51 @@ body {
   height: 506px;
 }
 
-
 .main__title {
   font-size: 36px;
   font-family: "helveticaNeue";
-
 }
+
 .main__subTitle {
   font-size: 24px;
   font-family: "helveticaNeue-Light";
   padding-left: 240px;
 }
-.main__subTitle__modif {
-    font-family: "helveticaNeue-Thin";
-}
 
+.main__subTitle__modif {
+  font-family: "helveticaNeue-Thin";
+}
 
 .main__descriptionText {
   font-size: 24px;
   font-family: "helveticaNeue-Light";
   margin-top: 60px;
 }
+
 .position {
   float: right;
 }
+
 .main__descriptionRating {
   font-size: 20px;
-  color: #003DFF;
+  color: grey;
   font-family: "helveticaNeue-Light";
   margin-top: 60px;
 }
+
 .main__descriptionRating__modif {
   font-size: 11px;
   color: #000;
 }
+
 .main__descriptionPrice {
   font-size: 24px;
   font-family: "helveticaNeue";
   color: #9B1616;
 }
-.main__descriptionButtonContainer {
 
-}
+.main__descriptionButtonContainer {}
+
 .main__descriptionButton {
   margin-top: 50px;
   font-size: 20px;
@@ -146,8 +151,8 @@ body {
   padding-bottom: 10px;
   transition: .2s;
   border: solid 1px;
-
 }
+
 .main__descriptionButton:hover {
   color: #000;
   background-color: #fff;
